--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "name": "SEngine",
   "require": {
-    "twig/twig": "1.24.1"
+    "twig/twig": "1.24.1",
+    "intervention/image": "^2.3"
   },
   "autoload": {
     "psr-4": {
